Basic Ad validation

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongoose": "~3.6.11",
     "cors": "~1.0.1",
     "newrelic": "~0.9.20",
-    "nodemailer": "~0.4.4"
+    "nodemailer": "~0.4.4",
+    "mongoose-validator": "~0.2.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
