--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "newrelic": "~0.9.20",
     "nodemailer": "~0.4.4",
     "mongoose-validator": "~0.2.1",
-    "node-uuid": "~1.4.0"
+    "node-uuid": "~1.4.0",
+    "email-templates": "~0.1.0",
+    "q": "~0.9.4"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
